discussion/kv_engine/157835/157835_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47484: Don't use Executorpool before created

The settings callbacks set up in settings_init will be
used during the initial load of the configuration file and parts
of the system may not be initialized at the time.

Refactor the code so that we delay the installation of the
callbacks until the pool is created (note: It still cannot
be called from a users context as we haven't started dispatching
client connections yet).

Added the parameters to the testapp config to verify that the
bug is fixed

Change-Id: I720a45c9cb33bf5b65d590bc6f369e9a0fab148c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-20 05:23:56.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-20 05:26:43.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37855/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12273/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12273/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/302/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/302/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12792/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12792/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/276/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/276/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12445/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12445/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20344/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20344/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11359/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10689/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:1001:5: error: use of undeclared identifier "startExeutorPool"; did you mean "startExecutorPool"? [clang-diagnostic-error]
    startExeutorPool();
    ^~~~~~~~~~~~~~~~
    startExecutorPool
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:742:13: note: "startExecutorPool" declared here
static void startExecutorPool() {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10689/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:1001:5:
error: use of undeclared identifier "startExeutorPool"; did you mean "startExecutorPool"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10689/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9346/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
